# cash-flow-api

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
cash_flow/: manage.py
cash_flow/apps/categories/: apps.py  exceptions.py  models.py  permissions.py  selectors.py  services.py
cash_flow/apps/categories/api/: serializers.py  urls.py  views.py
cash_flow/apps/categories/migrations/: 0001_initial.py  (+1 more)
cash_flow/apps/comments/: exceptions.py  models.py  services.py
cash_flow/apps/statuses/: apps.py  exceptions.py  filters.py  models.py  selectors.py  services.py
cash_flow/apps/subcategories/: apps.py  models.py  permissions.py  selectors.py  services.py
cash_flow/apps/transaction_types/: apps.py  exceptions.py  models.py  selectors.py  services.py
cash_flow/apps/transactions/: exceptions.py  models.py  selectors.py  services.py
cash_flow/apps/users/: exceptions.py  models.py  selectors.py  tasks.py
cash_flow/common/: exceptions.py  permissions.py
cash_flow/root/: __init__.py  celery.py  urls.py  wsgi.py
cash_flow/root/auth/: urls.py  views.py
cash_flow/templates/email/: confirm_email.html
docker/: Dockerfile  docker-compose.yml
scripts/: entrypoint.sh
src/: Dockerfile  entrypoint.sh
src/cash_flow/: manage.py
src/cash_flow/common/: permissions.py  send_email.py
src/cash_flow/root/: __init__.py  celery.py  urls.py  wsgi.py
tests/: conftest.py  constants.py  error_messages.py  factories.py
tests/test_models/: test_comment_model.py  test_status_model.py  test_transaction_model.py  test_user_model.py
(+86 files in other folders)
